refactor: 정적 팩토리 메서드 추가, 코드중복 제거 - LottoTicket.from(Set<Integer> number) - @ParameterizedTest, @MethodSource 테스트 중복제거 - stream.anyMatch() 이용한 테스트 중복제거